new classwork 1 fixed

--- a/index.html
+++ b/index.html
@@ -1,41 +1,16 @@
-<!DOCTYPE html>
+<!Doctype html>
 <html lang="en">
     <head>
-        <title> My Personal Webpage</title>
+        <title>
+            My First Webpage
+        </title>
     </head>
-<html>
 <body>
-<h1>
-    Haley Gonzalez
-</h1>
-<h2>
-    About me
-</h2>
-<p>
-    I am a senior at stbhs and im 17 years old. I used to play volleyball but i had to stop because of my knee. I am the youngest in my grade and i just turned 17 on the 20th. I have a younger brother who is 13 and is very annoying and loud.
-</p>
-<h2>
-    My intrests
-</h2>
-<ul>
-    <li>I love to sleep</li>
-    <li>I also love to eat</li>
-    <li>I love to babysit and be with my baby cousin</li>
-</ul>
-<h2>
-    Career Goals
-</h2>
-<ol>
-    <li>getting into my dream college</li>
-    <li>become a physical therapist with my own practice</li>
-    <li>i want to be a future therapist who helps and makes kids day</li>
-</ol>
-<h2>
-    Useful Links
-</h2>
-<p>
-    Check out my favorite website:
-    <a href="https://www.stbrendanhigh.org/">Click here</a>
-</p>
+    <h1>My First Webpage</h1>
+    <h2>Hi my name is Haley Gonzalez and this is my first webpage</h2>
+    <h3>My intrests are:</h3>
+    <li>Web Design</li>
+    <li>Coding</li>
+    <li>Digital Art</li>
 </body>
 </html>
